--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Consistent Overhead Byte Stuffing (COBS)</title>
@@ -58,7 +58,7 @@
       <table style="border:1px solid black;">
         <tr>
           <td style="border:1px solid black;"><b>Code</b></td>
-          <td style="border:1px solid black;"><b>Followed by</td>
+          <td style="border:1px solid black;"><b>Followed by</b></td>
           <td style="border:1px solid black;"><b>Meaning</b></td>
         </tr>
         <tr>
@@ -82,7 +82,6 @@
           <td style="border:1px solid black;">the 4 data bytes, <b>not</b> followed by zero</td>
         </tr>
       </table>
-    </p>
 
     <h2>COBS Encoding Examples</h2>
     <p>
@@ -102,16 +101,16 @@
       <br>
       <br>
       Finally, a note on colors:
-      <ul>
-        <li>The <font color="red">overhead character</font> will be in red.  This is the byte
-        added to the start of the encoded data.</li>
-        <li><font color="green">Altered or added characters</font> will be green.
-        (The only character that should be altered is zero.)
-        </li>
-        <li>The <font color="blue">final zero</font> appended to the end will be blue.</li>
-        <li>Unaltered characters will be black.</li>
-      </ul>
     </p>
+    <ul>
+      <li>The <font color="red">overhead character</font> will be in red.  This is the byte
+      added to the start of the encoded data.</li>
+      <li><font color="green">Altered or added characters</font> will be green.
+      (The only character that should be altered is zero.)
+      </li>
+      <li>The <font color="blue">final zero</font> appended to the end will be blue.</li>
+      <li>Unaltered characters will be black.</li>
+    </ul>
 
     <!-- Eh, could have used CSS and clever JavaScript looping but didn't feel like it. -->
     <table style="border:1px solid black;">
